After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678405 - pre-overview miscellaneous code cleanups
pre-overview miscellaneous code cleanups
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks: 455173
 
 
Reported: 2012-06-19 13:10 UTC by Claudio Saavedra
Modified: 2012-06-20 05:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-window: add _ephy_window_set_navigation_flags() (1.79 KB, patch)
2012-06-19 13:10 UTC, Claudio Saavedra
committed Details | Review
ephy-window: split ephy_window_set_active_tab() into smaller methods (13.03 KB, patch)
2012-06-19 13:10 UTC, Claudio Saavedra
committed Details | Review
ephy-location-entry: make it possible to hide the favicon (4.16 KB, patch)
2012-06-19 13:10 UTC, Claudio Saavedra
committed Details | Review
ephy-location-controller: add a boolean "show-icon" property (2.39 KB, patch)
2012-06-19 13:10 UTC, Claudio Saavedra
committed Details | Review
ephy-window: add a method to toggle visibility of default actions (2.73 KB, patch)
2012-06-19 13:10 UTC, Claudio Saavedra
committed Details | Review

Description Claudio Saavedra 2012-06-19 13:10:28 UTC
These patches reorganize a bit the code and add a few things we will need for the overview.
They are fairly orthogonal to the overview changes so they could go in in any case.
Comment 1 Claudio Saavedra 2012-06-19 13:10:31 UTC
Created attachment 216742 [details] [review]
ephy-window: add _ephy_window_set_navigation_flags()

We'll share this code later.
Comment 2 Claudio Saavedra 2012-06-19 13:10:33 UTC
Created attachment 216743 [details] [review]
ephy-window: split ephy_window_set_active_tab() into smaller methods

Which we will also reuse later on.
Comment 3 Claudio Saavedra 2012-06-19 13:10:36 UTC
Created attachment 216744 [details] [review]
ephy-location-entry: make it possible to hide the favicon

The favicon is not needed when the overview is visible.
Comment 4 Claudio Saavedra 2012-06-19 13:10:39 UTC
Created attachment 216745 [details] [review]
ephy-location-controller: add a boolean "show-icon" property

When the overview is visible, we don't need to show the favicon
Comment 5 Claudio Saavedra 2012-06-19 13:10:42 UTC
Created attachment 216746 [details] [review]
ephy-window: add a method to toggle visibility of default actions

Where default actions are the ones that should be disabled when the
overview or a blank page are visible.
Comment 6 Xan Lopez 2012-06-19 13:41:59 UTC
Review of attachment 216742 [details] [review]:

Looks good.
Comment 7 Xan Lopez 2012-06-19 13:42:43 UTC
Review of attachment 216743 [details] [review]:

OK.
Comment 8 Xan Lopez 2012-06-19 13:44:06 UTC
Review of attachment 216744 [details] [review]:

OK.
Comment 9 Xan Lopez 2012-06-19 13:45:41 UTC
Review of attachment 216745 [details] [review]:

OK.

::: src/ephy-location-controller.c
@@ +592,3 @@
+							       "If we should show the favicon",
+							       TRUE,
+							       G_PARAM_CONSTRUCT | G_PARAM_READWRITE | G_PARAM_STATIC_NAME | G_PARAM_STATIC_NICK | G_PARAM_STATIC_BLURB));

Nitpick: s/If/Whether/ in both.
Comment 10 Xan Lopez 2012-06-19 13:46:43 UTC
Review of attachment 216745 [details] [review]:

OK, but this does not actually bind the overview visibility to the icon visibility right? The commit message is a bit misguiding.
Comment 11 Xan Lopez 2012-06-19 13:52:14 UTC
Review of attachment 216746 [details] [review]:

Hrm, if the flag used here is always SENS_FLAG_IS_BLANK shouldn't it be just hardcoded? Does this become configurable at some point? I find a bit confusing the "flags" name when you always pass the same thing.
Comment 12 Claudio Saavedra 2012-06-19 15:16:10 UTC
(In reply to comment #10)
> Review of attachment 216745 [details] [review]:
> 
> OK, but this does not actually bind the overview visibility to the icon
> visibility right? The commit message is a bit misguiding.

Maybe I should remove the mention to the overview, since it's not-existent yet. Once we add it we bind both.

(In reply to comment #11)
> Review of attachment 216746 [details] [review]:
> 
> Hrm, if the flag used here is always SENS_FLAG_IS_BLANK shouldn't it be just
> hardcoded? Does this become configurable at some point? I find a bit confusing
> the "flags" name when you always pass the same thing.

We later use this method with SENS_FLAG_IS_OVERVIEW or something like that, that's the point of factoring the code out now.
Comment 13 Xan Lopez 2012-06-19 15:46:50 UTC
Review of attachment 216746 [details] [review]:

OK then, I just needed that context to figure this out.