ephy-window: add _ephy_window_set_navigation_flags()

We'll share this code later.

https://bugzilla.gnome.org/show_bug.cgi?id=678405